[tool.poetry]
name = "greetbot"
version = "0.2"
description = "A bot that will accept applications in the telegram channel and write a greeting"
authors = ["Roman Sushka <barabum@duck.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiogram = "^3.3.0"
pydantic = "^2.5.0"
beanie = "^1.25.0"
loguru = "^0.7.2"
pydantic-settings = "^2.1.0"
aiogram-media-group = "^0.5.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
isort = "^5.13.2"
black = "^24.1.1"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
app = "greetbot.__main__:start"
