[tool.poetry]
package-mode = false
name = "greetbot"
description = "A bot that accepts applications to the Telegram channel and writes a greeting"
authors = ["Roman Sushka <barabum@duck.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiogram = "^3.3.0"
pydantic = "^2.5.0"
beanie = "^1.25.0"
loguru = "^0.7.2"
pydantic-settings = "^2.1.0"
aiogram-media-group = "^0.5.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
isort = "^5.13.2"
black = "^24.1.1"
pre-commit = "^3.6.1"

[tool.poetry.scripts]
app = "greetbot.__main__:start"
